--- a/FaceTek/Base.lproj/Main.storyboard
+++ b/FaceTek/Base.lproj/Main.storyboard
@@ -971,7 +971,7 @@
                                         </constraints>
                                     </view>
                                     <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="2y9-EJ-HK9">
-                                        <rect key="frame" x="0.0" y="175" width="259" height="221"/>
+                                        <rect key="frame" x="0.0" y="175" width="259" height="295"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="259" id="w0f-a2-BzM"/>
@@ -982,13 +982,13 @@
                                         </connections>
                                     </tableView>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wUI-5x-bBH">
-                                        <rect key="frame" x="0.0" y="396" width="259" height="154"/>
+                                        <rect key="frame" x="0.0" y="470" width="259" height="80"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ywh-Zn-nI2">
-                                                <rect key="frame" x="0.0" y="28" width="259" height="91"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="259" height="50"/>
                                                 <subviews>
                                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" text="E-201, 2nd floor , sunrise Chambers ,22, Ulsoor Road" translatesAutoresizingMaskIntoConstraints="NO" id="Rmc-TN-Jlc">
-                                                        <rect key="frame" x="9" y="0.0" width="240" height="75"/>
+                                                        <rect key="frame" x="9" y="0.0" width="240" height="50"/>
                                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                                         <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -998,15 +998,15 @@
                                                 </subviews>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="height" constant="91" id="FcK-7h-JCY"/>
-                                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="72" id="tSY-BC-rsG"/>
+                                                    <constraint firstAttribute="height" constant="50" id="FcK-7h-JCY"/>
+                                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="50" id="tSY-BC-rsG"/>
                                                 </constraints>
                                             </view>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="   © Powered by LNG Technologies Pvt Ltd" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fGg-9K-TWY">
-                                                <rect key="frame" x="0.0" y="105" width="259" height="41"/>
+                                                <rect key="frame" x="0.0" y="50" width="259" height="35"/>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="height" constant="41" id="6ZK-sD-pd4"/>
+                                                    <constraint firstAttribute="height" constant="35" id="6ZK-sD-pd4"/>
                                                 </constraints>
                                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                 <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -1018,12 +1018,12 @@
                                         <constraints>
                                             <constraint firstItem="fGg-9K-TWY" firstAttribute="leading" secondItem="wUI-5x-bBH" secondAttribute="leading" id="78q-nW-M4X"/>
                                             <constraint firstItem="ywh-Zn-nI2" firstAttribute="leading" secondItem="wUI-5x-bBH" secondAttribute="leading" id="AML-k7-Anb"/>
-                                            <constraint firstItem="ywh-Zn-nI2" firstAttribute="top" secondItem="wUI-5x-bBH" secondAttribute="top" constant="28" id="E0D-ac-Igf"/>
+                                            <constraint firstItem="ywh-Zn-nI2" firstAttribute="top" secondItem="wUI-5x-bBH" secondAttribute="top" id="E0D-ac-Igf"/>
                                             <constraint firstAttribute="trailing" secondItem="ywh-Zn-nI2" secondAttribute="trailing" id="FiM-tq-Ne3"/>
                                             <constraint firstAttribute="width" constant="259" id="cBc-02-p2D"/>
-                                            <constraint firstAttribute="bottom" secondItem="fGg-9K-TWY" secondAttribute="bottom" constant="8" id="ezD-gz-QsL"/>
+                                            <constraint firstAttribute="bottom" secondItem="fGg-9K-TWY" secondAttribute="bottom" constant="-5" id="ezD-gz-QsL"/>
                                             <constraint firstAttribute="trailing" secondItem="fGg-9K-TWY" secondAttribute="trailing" id="mAS-vO-2nG"/>
-                                            <constraint firstAttribute="height" constant="154" id="qks-1C-Up2"/>
+                                            <constraint firstAttribute="height" constant="80" id="qks-1C-Up2"/>
                                         </constraints>
                                     </view>
                                 </subviews>
@@ -1091,7 +1091,7 @@
                     </connections>
                 </tapGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="4367" y="90"/>
+            <point key="canvasLocation" x="4365.6000000000004" y="89.505247376311857"/>
         </scene>
         <!--Office InVC-->
         <scene sceneID="sMU-ZB-S5W">
@@ -4390,7 +4390,7 @@
                                         </constraints>
                                     </view>
                                     <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="OFB-IL-zyD">
-                                        <rect key="frame" x="0.0" y="169" width="260" height="244"/>
+                                        <rect key="frame" x="0.0" y="169" width="260" height="295"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="260" id="q3h-Ef-3oV"/>
@@ -4401,17 +4401,17 @@
                                         </connections>
                                     </tableView>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nyO-u0-ToZ">
-                                        <rect key="frame" x="0.0" y="413" width="260" height="135"/>
+                                        <rect key="frame" x="0.0" y="464" width="260" height="84"/>
                                         <subviews>
                                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="E-201, 2nd floor , sunrise Chambers ,22, Ulsoor Road" translatesAutoresizingMaskIntoConstraints="NO" id="cYy-Yb-i4V">
-                                                <rect key="frame" x="14" y="19" width="232" height="62"/>
+                                                <rect key="frame" x="14" y="0.0" width="232" height="50"/>
                                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                                 <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                             </textView>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" © Powered by LNG Technologies Pvt Ltd" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bSN-Kj-DrW">
-                                                <rect key="frame" x="0.0" y="92" width="260" height="35"/>
+                                                <rect key="frame" x="0.0" y="50" width="260" height="35"/>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="35" id="vhv-7Z-1Y3"/>
@@ -4424,14 +4424,14 @@
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="trailing" secondItem="bSN-Kj-DrW" secondAttribute="trailing" id="6yU-ZG-wvd"/>
-                                            <constraint firstItem="cYy-Yb-i4V" firstAttribute="top" secondItem="nyO-u0-ToZ" secondAttribute="top" constant="19" id="AlX-K1-MTW"/>
+                                            <constraint firstItem="cYy-Yb-i4V" firstAttribute="top" secondItem="nyO-u0-ToZ" secondAttribute="top" id="AlX-K1-MTW"/>
                                             <constraint firstAttribute="trailing" secondItem="cYy-Yb-i4V" secondAttribute="trailing" constant="14" id="P3O-UD-Xns"/>
                                             <constraint firstItem="cYy-Yb-i4V" firstAttribute="leading" secondItem="nyO-u0-ToZ" secondAttribute="leading" constant="14" id="es9-9t-4hi"/>
-                                            <constraint firstItem="bSN-Kj-DrW" firstAttribute="top" secondItem="cYy-Yb-i4V" secondAttribute="bottom" constant="11" id="hfj-gJ-7te"/>
+                                            <constraint firstItem="bSN-Kj-DrW" firstAttribute="top" secondItem="cYy-Yb-i4V" secondAttribute="bottom" id="hfj-gJ-7te"/>
                                             <constraint firstAttribute="width" constant="260" id="kp6-Te-nXt"/>
-                                            <constraint firstAttribute="height" constant="135" id="rSa-Bk-SAM"/>
+                                            <constraint firstAttribute="height" constant="84" id="rSa-Bk-SAM"/>
                                             <constraint firstItem="bSN-Kj-DrW" firstAttribute="leading" secondItem="nyO-u0-ToZ" secondAttribute="leading" id="twC-nZ-q0D"/>
-                                            <constraint firstAttribute="bottom" secondItem="bSN-Kj-DrW" secondAttribute="bottom" constant="8" id="uPD-um-joL"/>
+                                            <constraint firstAttribute="bottom" secondItem="bSN-Kj-DrW" secondAttribute="bottom" constant="-1" id="uPD-um-joL"/>
                                         </constraints>
                                     </view>
                                 </subviews>
@@ -4525,7 +4525,7 @@
                     </connections>
                 </tapGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="4367" y="759"/>
+            <point key="canvasLocation" x="4365.6000000000004" y="757.87106446776613"/>
         </scene>
         <!--Home-->
         <scene sceneID="Sbr-RY-vHj">
@@ -5332,7 +5332,7 @@
                                         </constraints>
                                     </view>
                                     <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="FFQ-Cp-2tR">
-                                        <rect key="frame" x="0.0" y="170" width="260" height="235"/>
+                                        <rect key="frame" x="0.0" y="170" width="260" height="295"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <connections>
                                             <outlet property="dataSource" destination="ZWW-Ya-gZs" id="3Ls-zW-ct9"/>
@@ -5340,10 +5340,10 @@
                                         </connections>
                                     </tableView>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ftr-1W-Uz0">
-                                        <rect key="frame" x="0.0" y="402" width="260" height="111"/>
+                                        <rect key="frame" x="0.0" y="463" width="260" height="50"/>
                                         <subviews>
                                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="E-201, 2nd floor , sunrise Chambers ,22, Ulsoor Road" translatesAutoresizingMaskIntoConstraints="NO" id="pHY-5M-wpJ">
-                                                <rect key="frame" x="10" y="24" width="240" height="67"/>
+                                                <rect key="frame" x="10" y="0.0" width="240" height="40"/>
                                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                                 <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -5352,11 +5352,11 @@
                                         </subviews>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="111" id="7wv-ju-QTv"/>
+                                            <constraint firstAttribute="height" constant="50" id="7wv-ju-QTv"/>
                                             <constraint firstAttribute="trailing" secondItem="pHY-5M-wpJ" secondAttribute="trailing" constant="10" id="9t7-As-SPA"/>
                                             <constraint firstItem="pHY-5M-wpJ" firstAttribute="leading" secondItem="ftr-1W-Uz0" secondAttribute="leading" constant="10" id="E3G-fj-qqo"/>
-                                            <constraint firstItem="pHY-5M-wpJ" firstAttribute="top" secondItem="ftr-1W-Uz0" secondAttribute="top" constant="24" id="TLr-4d-0a1"/>
-                                            <constraint firstAttribute="bottom" secondItem="pHY-5M-wpJ" secondAttribute="bottom" constant="20" id="cAC-pf-Bjn"/>
+                                            <constraint firstItem="pHY-5M-wpJ" firstAttribute="top" secondItem="ftr-1W-Uz0" secondAttribute="top" id="TLr-4d-0a1"/>
+                                            <constraint firstAttribute="bottom" secondItem="pHY-5M-wpJ" secondAttribute="bottom" constant="10" id="cAC-pf-Bjn"/>
                                         </constraints>
                                     </view>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="    © Powered by LNG Technologies Pvt Ltd" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B9k-cV-3eT">
@@ -5378,7 +5378,7 @@
                                     <constraint firstItem="B9k-cV-3eT" firstAttribute="leading" secondItem="FQZ-Jp-sXC" secondAttribute="leading" id="36U-CS-n1G"/>
                                     <constraint firstItem="d6b-fU-KQQ" firstAttribute="leading" secondItem="FQZ-Jp-sXC" secondAttribute="leading" id="3Vm-kp-7cR"/>
                                     <constraint firstAttribute="trailing" secondItem="7cz-VZ-DPY" secondAttribute="trailing" id="5pt-9R-mPm"/>
-                                    <constraint firstItem="B9k-cV-3eT" firstAttribute="top" secondItem="FFQ-Cp-2tR" secondAttribute="bottom" constant="108" id="66K-JA-7Ov"/>
+                                    <constraint firstItem="B9k-cV-3eT" firstAttribute="top" secondItem="FFQ-Cp-2tR" secondAttribute="bottom" constant="48" id="66K-JA-7Ov"/>
                                     <constraint firstItem="B9k-cV-3eT" firstAttribute="top" secondItem="ftr-1W-Uz0" secondAttribute="bottom" id="DiZ-Kh-0Va"/>
                                     <constraint firstAttribute="trailing" secondItem="FFQ-Cp-2tR" secondAttribute="trailing" constant="115" id="Jn3-xM-tIL"/>
                                     <constraint firstItem="FFQ-Cp-2tR" firstAttribute="top" secondItem="d6b-fU-KQQ" secondAttribute="bottom" id="RwH-x2-uax"/>
